# GTree

./: Makefile  README.md
GraphTree/: CMakeLists.txt  Dijkstra.h  GTree.h  main.cpp
GraphTree/data/: CAL.query  FLA.query
GraphTree/entity/: Graph.h  Matrix.h  Node.h
GraphTree/util/: constants.h  debug_funcs.h  gene_query.h  io.h  misc.h
data/: CAL.gr
include/: libgtree.h
include/libgtree/: constants.h  debug_funcs.h  dijkstra.h  gene_query.h  graph.h  gtree.h  io.h  matrix.h  misc.h  node.h
src/: gtree-build.cc  gtree-query.cc
